--- a/chrome/sidebar.css
+++ b/chrome/sidebar.css
@@ -13,7 +13,6 @@
     position: absolute;
     margin: -12px 12px;
     padding: 0 4px;
-    z-index: 2;
     font-size: 1.15em;
   }
   &:hover::before {
