--- a/chrome/tabs.css
+++ b/chrome/tabs.css
@@ -23,7 +23,6 @@
     position: absolute;
     margin: -12px 12px;
     padding: 0 2px;
-    z-index: 2;
     font-size: 1.15em;
   }
   &:hover::before {
